@@ -7833,6 +7833,25 @@ build_data_member_initialization (tree t, vec<constructor_elt, va_gc> **vec)
   return true;
 }
 
+/* Subroutine of check_constexpr_ctor_body and massage_constexpr_body.
+   In C++11 mode checks that the TYPE_DECLs in the BIND_EXPR_VARS of a 
+   BIND_EXPR conform to 7.1.5/3/4 on typedef and alias declarations.  */
+
+static bool
+check_constexpr_bind_expr_vars (tree t)
+{
+  gcc_assert (TREE_CODE (t) == BIND_EXPR);
+
+  if (cxx_dialect >= cxx14)
+    return true;
+
+  for (tree var = BIND_EXPR_VARS (t); var; var = DECL_CHAIN (var))
+    if (TREE_CODE (var) == TYPE_DECL
+	&& DECL_IMPLICIT_TYPEDEF_P (var))
+      return false;
+  return true;
+}
+
 /* Make sure that there are no statements after LAST in the constructor
    body represented by LIST.  */
 
@@ -7850,7 +7869,7 @@ check_constexpr_ctor_body (tree last, tree list)
 	    break;
 	  if (TREE_CODE (t) == BIND_EXPR)
 	    {
-	      if (BIND_EXPR_VARS (t))
+	      if (!check_constexpr_bind_expr_vars (t))
 		{
 		  ok = false;
 		  break;
@@ -7860,8 +7879,6 @@ check_constexpr_ctor_body (tree last, tree list)
 	      else
 		continue;
 	    }
-	  /* We currently allow typedefs and static_assert.
-	     FIXME allow them in the standard, too.  */
 	  if (TREE_CODE (t) != STATIC_ASSERT)
 	    {
 	      ok = false;
@@ -7964,6 +7981,8 @@ build_constexpr_constructor_member_initializers (tree type, tree body)
 	     "a function-try-block");
       return error_mark_node;
     }
+  else if (TREE_CODE (body) == BIND_EXPR)
+    ok = build_data_member_initialization (BIND_EXPR_BODY (body), &vec);
   else if (EXPR_P (body))
     ok = build_data_member_initialization (body, &vec);
   else
@@ -8055,7 +8074,8 @@ massage_constexpr_body (tree fun, tree body)
         body = EH_SPEC_STMTS (body);
       if (TREE_CODE (body) == MUST_NOT_THROW_EXPR)
 	body = TREE_OPERAND (body, 0);
-      if (TREE_CODE (body) == BIND_EXPR)
+      if (TREE_CODE (body) == BIND_EXPR
+	  && check_constexpr_bind_expr_vars (body))
 	body = BIND_EXPR_BODY (body);
       body = constexpr_fn_retval (body);
     }
